# realtime-chat

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  HardFix.md  LICENSE  README.md  docker-compose.yml  todo.md
.github/workflows/: check.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  main.rs  types.rs
backend/src/encryption/: mod.rs
backend/src/server/: mod.rs
frontend/: README.md  index.html  styles.css
frontend/js/: crypto.js  main.js  ui.js  utils.js
http-serve/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
http-serve/src/: colors.rs  config.rs  handlers.rs  main.rs  watcher.rs
http-serve/src/server/: mod.rs
http-serve/src/websocket/: mod.rs
