[package]
name = "realtime-chat"
version = "1.0.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
dotenvy = "0.15.7"
rand = "0.9.2"
pbkdf2 = "0.12.2"
rand_core = "0.9.3"